# gateway

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/components/common/: common.c  common.h  header.c  header.h
main/components/conf/: conf.c  conf.h
main/components/conf/eeprom/: eeprom.c  eeprom.h
main/components/ethernet/: ethernet.c  ethernet.h
main/components/gateway/: gateway.c  gateway.h
main/components/keyboard/: keyboard.h
main/components/mqtt/: mqtt.c  mqtt.h
main/components/node/: node.c  node.h  node_array.c  node_array.h
main/components/sensor/: main.c  sensor.c  sensor.h
main/components/siren/: siren.c  siren.h
main/components/wifi/: wifi.c  wifi.h
